tests/syntax/bad/testfile-class_decl1-1.scala
class { }
object Main { def main(args: Array[String]) { } }
